k8s/app/templates/alertmanager/alertmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alertmanager
  name: alertmanager
  namespace: monitoring
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9093
    name: alertmanager
  selector:
    app: alertmanager
